--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/social_engagement.jpg" alt="social_engagement.jpg" /></div><div class="content">
 								<h2>Social Engagement and Hobbies</h2>
-								<p>Next to performing various activities like scuba diving, playing football and weight lifting, I am an active member of <a href="http://www.wplusk.de/">"Stiftung Wissen+Kompetenzen"</a> and <a href="https://pioniergarage.de/">"PionierGarage e.V."</a>. Back in Germany I was Managing Director of PionierGarage and Project Coordinator of <a href="http://grow.pioniergarage.de/">"GROW - Gründungswettbewerb"</a>. </br>In Australia I organized the "Cheap Chewsday - Germany" in May 2018. It's a subsidized cooking event where we will cook german dinner for about 200 people!</p>
+								<p>Next to performing various activities like scuba diving, playing football and weight lifting, I am an active member of<br /> <a href="http://www.wplusk.de/">"Stiftung Wissen+Kompetenzen"</a> and <a href="https://pioniergarage.de/">"PionierGarage e.V."</a>. Back in Germany I was Managing Director of PionierGarage and Project Coordinator of <a href="http://grow.pioniergarage.de/">"GROW - Gründungswettbewerb"</a>. </br>In Australia I organized the "Cheap Chewsday - Germany" in May 2018. It's a subsidized cooking event where we will cook german dinner for about 200 people!</p>
 							</div>
 						</section>
 					</section>
