--- a/index.html
+++ b/index.html
@@ -22,12 +22,16 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<h1><a href="#banner" class="more scrolly">Martin Thoma</a></h1>
-						<ul class="icons" style="margin-left: 85%">
-							<li><a href="www.linkedin.com/in/thoma-martin" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="mailto:martin.thoma@web.de" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-							<li><a href="https://github.com/Thoma997" class="icon fa-github"><span class="label">GitHub</span></a></li>
+						<div style="width: 45%; float: right;">
+							<ul class="icons" style="margin-left: 65%;">
+								<li><a href="www.linkedin.com/in/thoma-martin" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="mailto:martin.thoma@web.de" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+								<li><a href="https://github.com/Thoma997" class="icon fa-github"><span class="label">GitHub</span></a></li>
+								<li style="margin-top: 10px"><a href="#"><img src="images/union-jack-flag.png" alt="image-english-flag"></a></li>
+								<li style="margin-top: 10px"><a href="index-de.html"><img src="images/german-flag.png" alt="image-german-flag"></a></li>
+							</ul>
+						</div>
 
-						</ul>
 						<!-- <nav id="nav">
 							<ul>
 								<li class="special">
@@ -43,6 +47,8 @@
 							</ul>
 						</nav> -->
 					</header>
+
+
 
 				<!-- Banner -->
 					<section id="banner" style="background-image: url(http://thoma997.github.io/images/banner.JPG); background-size: cover">
