added learn more to banner

--- a/index-de.html
+++ b/index-de.html
@@ -57,7 +57,7 @@
             <p>Das ist <strong>Martin S. Thoma</strong>s Website.</br>
                 Hier finden Sie eine kurze Präsentation</br>meiner Projekte, Leidenschaften und mir selbst.</p>
         </div>
-        <a href="#two" class="more scrolly">Learn More</a>
+        <a href="#two" class="more scrolly">Los Gehts</a>
     </section>
     <!-- One -->
     <!-- <section id="one" class="wrapper style1 special">
