--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 							<p>I am <strong>Martin S. Thoma</strong>.</br>
 								You will find a short presentation</br>of my projects, passions and myself.</p>
 						</div>
-						<!-- <a href="#two" class="more scrolly">Learn More</a> -->
+						 <a href="#two" class="more scrolly">Learn More</a>
 					</section>
 
 				<!-- One -->
