google form added. german and english version of websites page. optimization of index pages. adjustments in css.

--- a/index-de.html
+++ b/index-de.html
@@ -27,8 +27,8 @@
                 <li><a href="www.linkedin.com/in/thoma-martin" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
                 <li><a href="mailto:martin.thoma@web.de" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
                 <li><a href="https://github.com/Thoma997" class="icon fa-github"><span class="label">GitHub</span></a></li>
-                <li style="margin-top: 10px"><a href="#"><img src="images/union-jack-flag.png" alt="image-english-flag"></a></li>
-                <li style="margin-top: 10px"><a href="index-de.html"><img src="images/german-flag.png" alt="image-german-flag"></a></li>
+                <li style="margin-top: 10px"><a href="index.html"><img src="images/union-jack-flag.png" alt="image-english-flag"></a></li>
+                <li style="margin-top: 10px"><a href="#"><img src="images/german-flag.png" alt="image-german-flag"></a></li>
             </ul>
         </div>
 
@@ -57,7 +57,9 @@
             <p>Das ist <strong>Martin S. Thoma</strong>s Website.</br>
                 Hier finden Sie eine kurze Präsentation</br>meiner Projekte, Leidenschaften und mir selbst.</p>
         </div>
-        <a href="#two" class="more scrolly">Los Gehts</a>
+        <br />
+        <br />
+        <a href="#two" class="more scrolly"><b>Los Gehts</b></a>
     </section>
     <!-- One -->
     <!-- <section id="one" class="wrapper style1 special">
@@ -81,13 +83,14 @@
         <section class="spotlight">
             <div class="image"><img src="images/work_background.jpg" alt="work_background.jpg" /></div><div class="content">
             <h2>Arbeit</h2>
-            <p>Derzeit arbeite ich als Freelancer und entwickle Websiten für Personen und Unternehmen. Während meiner Praktika und Werkstudentenstellen konnte ich ebenso Erfahrungen im Bereich der Onlineautomatisierung, Unternehmensanalyse und Projektmanagement gewinnen, wie auch im Unterrichten als Tutor am KIT. Ich liebe es, mich aus meiner Konfortzone zu locken und gefordert zu werden.</p>
+            <p>Derzeit arbeite ich als Freelancer und entwickle Websiten für Personen und Unternehmen. Während meiner Praktika und Werkstudentenstellen konnte ich ebenso Erfahrungen im Bereich der Onlineautomatisierung, Unternehmensanalyse und Projektmanagement gewinnen, wie auch im Unterrichten als Tutor am KIT. Ich liebe es, mich aus meiner Konfortzone zu locken und gefordert zu werden.
+                <br /><br /> <a href="webseiten-de.html" class="button">Interesse an einer Webseite? Hier Klicken.</a></p>
         </div>
         </section>
         <section class="spotlight">
             <div class="image"><img src="images/studies_australia.jpg" alt="studies_australia.jpg" /></div><div class="content">
             <h2>Studium</h2>
-            <p>Seit kurzem bin ich zurück aus meinem Auslandssemester, welches ich an der University of Newcastle in Australien verbracht habe. In Deutschland befinde ich mich derzeit im 6. Semester meines Bachelors des Studiengangs Wirtschaftsingenieurswesen, welchen ich am Karlsruher Institut für Technologie abschließen werde.</p>
+            <p>Seit kurzem bin ich zurück aus meinem Auslandssemester, welches ich an der University of Newcastle in Australien absolviert habe. In Deutschland befinde ich mich derzeit im 6. Semester meines Bachelors des Studiengangs Wirtschaftsingenieurswesen, welchen ich am Karlsruher Institut für Technologie abschließen werde.</p>
         </div>
         </section>
         <section class="spotlight">
@@ -108,8 +111,8 @@
                 <li class="icon fa-code">
                     <h3>Webseiten Programmierung</h3>
                     <p>Das Programmieren von Webseiten und Kundenkontakt macht eine Menge Spaß und ist eine tolle Möglchkeit sich während des Studiums etwas dazu zu verdienen. Ein Beispiel einer Webseite?
-                        <a href="http://reiserlaw.eu">-Hier Gehts Lang-</a></p>
-                    <p>Falls Sie an einer Webseite interessiert sind, folgen Sie bitte dem <a href="#form" class="more scrolly">Link</a></p>
+                        <br /> <a href="http://reiserlaw.eu">Hier entlang.</a></p>
+                    <p>Falls Sie an einer Webseite interessiert sind, folgen Sie einfach diesem <a href="webseiten-de.html" class="more scrolly">Link</a></p>
                 </li>
                 <li class="icon fa-search">
                     <h3>Arbeitssuchender</h3>
@@ -117,22 +120,22 @@
                 </li>
                 <li class="icon fa-book">
                     <h3>Ein Datenanalyst werden</h3>
-                    <p>Statistic, Operations Research und Computerwissenschaften. Gemeinsam bilden diese Disziplinen das ultimative Werkzeug um riesige Mengen an Daten zu analysieren und komplexe Vorhersagen verblüffend genau zu treffen. Für das nächste Jahr habe ich mit vorgenommen meine Fähigkeiten in diesem Gebieten, sowohl im Rahmen meiner Bachelorarbeit als auch meines Masterstudiums, zu trainieren.</p>
+                    <p>Statistik, Operations Research und Computerwissenschaften. Gemeinsam bilden diese Disziplinen das ultimative Werkzeug um riesige Mengen an Daten zu analysieren und komplexe Vorhersagen verblüffend genau zu treffen. Für das nächste Jahr habe ich mir vorgenommen, meine Fähigkeiten in diesen Gebieten sowohl im Rahmen meiner Bachelorarbeit als auch meines Masterstudiums zu trainieren.</p>
                 </li>
                 <li class="icon fa-rocket">
                     <h3>Vorstand der PionierGarage e.V.</h3>
-                    <p>Die PionierGarage e.V. ich die Hochschulgruppe für Gründertum am KIT.Der Beitrit zum Verein weckte mehr und mehr meine Begeisterung einmal ein eigenes Unternehmen zu gründen. In der Zwischenzeit startete eigene Ideen zu validieren und Projekte zu starten.
+                    <p>Die PionierGarage e.V. ich die Hochschulgruppe für Gründertum am KIT.Der Beitrit zum Verein weckte mehr und mehr meine Begeisterung dafür, einmal ein eigenes Unternehmen zu gründen. In der Zwischenzeit startete ich mit Freunden eigene Ideen zu validieren.
                         </br>Falls Du am Gründertum interessiert bist, </br>folge einfach dem
                         <a href="http://pioniergarage.de">Link zur PionierGarage Webseite</a>.</p>
                 </li>
                 <li class="icon fa-leaf">
                     <h3>GROW-Gründungswettbewerb</h3>
-                    <p>Verantwortlich für die Organisation des größten, von Studierenden organisierten Gründungswettbewerbes in Deugtschland gewesen zu sein und diese Aufgabe erfolgreich gemeistert zu haben erfüllt mich sehr. im Wintersemester 2018 traten 18 Teams an, um ihre Geschäftsideen so weit wie möglich voranzubringen, um Preise im Wert von über 8000€ abzuräumen. Ich freue mich darauf, den Wettbewerb im WiSe 2019 in überwiegend beratender Funktion zu begleiten.</p>
+                    <p>Verantwortlich für die Organisation des größten, von Studierenden organisierten Gründungswettbewerbes in Deutschland gewesen zu sein und diese Aufgabe erfolgreich gemeistert zu haben erfüllt mich sehr. im Wintersemester 2018 traten 18 Teams an, um ihre Geschäftsideen so weit wie möglich voranzubringen, um Preise im Wert von über 8000€ abzuräumen. Ich freue mich darauf, den Wettbewerb im WiSe 2019 in überwiegend beratender Funktion zu begleiten.</p>
                     <p><a href="grow.pioniergarage.de">Hier</a> findest du alle Informationen über den diesjährigen Wettbewerb.</p>
                 </li>
                 <li class="icon fa-volume-up">
                     <h3><a href="#form" class="more scrolly">Sag Hallo!</a></h3>
-                    <p>Ich bin sehr offen für neue Kontakte und anregende Gespräche. Falls du an persönlichem oder geschäftlichen Kontakt interessiert bist, schreibe mit einfach eine kurze Nachricht. Das Kontaktfurmular findest du weiter unten.</p>
+                    <p>Ich bin immer offen für neue Kontakte und anregende Gespräche. Falls Sie an persönlichen oder geschäftlichen Kontakt interessiert sind, schreiben Sie mir einfach eine kurze Nachricht. Das Kontaktformular finden Sie weiter unten.</p>
                 </li>
             </ul>
         </div>
