--- a/index.html
+++ b/index.html
@@ -57,7 +57,10 @@
 							<p>I am <strong>Martin S. Thoma</strong>.</br>
 								You will find a short presentation</br>of my projects, passions and myself.</p>
 						</div>
-						 <a href="#two" class="more scrolly">Learn More</a>
+						<br />
+						<br />
+						<br />
+						 <a href="#two" class="more scrolly"><b>Learn More</b></a>
 					</section>
 
 				<!-- One -->
@@ -82,7 +85,8 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/work_background.jpg" alt="work_background.jpg" /></div><div class="content">
 								<h2>Work</h2>
-								<p>Currently I am working as a freelancer. I develop websites for privaters and small businesses. I gained experience in Web Automation, Business Analytics, Machine Intelligence, teaching classes and Project Management. I love to master challenges and to force myself out of comfort zones. During my time as exchange student in Australia I additionally work as waiter at <a href="https://restaurantmason.com/">Restaurant Mason</a>, Newcastle to finance my year abroad.</p>
+							<p>Currently I am working as a freelancer. I develop websites for privaters and small businesses. I gained experience in Web Automation, Business Analytics, Machine Intelligence, teaching classes and Project Management. I love to master challenges and to force myself out of comfort zones. During my time as exchange student in Australia I additionally work as waiter at <a href="https://restaurantmason.com/">Restaurant Mason</a>, Newcastle to finance my year abroad. <br /><br />
+								<a href="websites.html" class="button">Click Here to learn more about my websites</a></p>
 							</div>
 						</section>
 						<section class="spotlight">
@@ -116,7 +120,7 @@
 									<h3>Programming Websites</h3>
 									<p>Programming websites and contact to costumers are a lot of fun and a posibility to earn some money while studying. You like to see an example besides this website?
 										<a href="http://reiserlaw.eu">Here you go</a></p>
-									<p>If you are interested in me as website developer, <a href="#form" class="more scrolly">just say hello!</a></p>
+									<p>If you are interested in getting your own website, <a href="websites.html" class="more scrolly">just click here.</a></p>
 								</li>
 								<li class="icon fa-search">
 									<h3>Job Seeker</h3>
