killed bugs mistakes and improved design

--- a/index-de.html
+++ b/index-de.html
@@ -23,12 +23,12 @@
     <header id="header" class="alt">
         <h1><a href="#banner" class="more scrolly">Martin Thoma</a></h1>
         <div style="width: 45%; float: right;">
-            <ul class="icons" style="margin-left: 65%;">
+            <ul class="icons navigation">
                 <li><a href="www.linkedin.com/in/thoma-martin" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
                 <li><a href="mailto:martin.thoma@web.de" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
                 <li><a href="https://github.com/Thoma997" class="icon fa-github"><span class="label">GitHub</span></a></li>
-                <li style="margin-top: 10px"><a href="index.html"><img src="images/union-jack-flag.png" alt="image-english-flag"></a></li>
-                <li style="margin-top: 10px"><a href="#"><img src="images/german-flag.png" alt="image-german-flag"></a></li>
+                <li><a href="index.html"><img src="images/union-jack-flag.png" alt="image-english-flag"></a></li>
+                <li><a href="#"><img src="images/german-flag.png" alt="image-german-flag"></a></li>
             </ul>
         </div>
 
@@ -84,13 +84,15 @@
             <div class="image"><img src="images/work_background.jpg" alt="work_background.jpg" /></div><div class="content">
             <h2>Arbeit</h2>
             <p>Derzeit arbeite ich als Freelancer und entwickle Websiten für Personen und Unternehmen. Während meiner Praktika und Werkstudentenstellen konnte ich ebenso Erfahrungen im Bereich der Onlineautomatisierung, Unternehmensanalyse und Projektmanagement gewinnen, wie auch im Unterrichten als Tutor am KIT. Ich liebe es, mich aus meiner Konfortzone zu locken und gefordert zu werden.
-                <br /><br /> <a href="webseiten-de.html" class="button">Interesse an einer Webseite? Hier Klicken.</a></p>
+                <br /><br /> </p>
+            <a href="webseiten-de.html" class="button">Interesse?</a>
         </div>
         </section>
         <section class="spotlight">
             <div class="image"><img src="images/studies_australia.jpg" alt="studies_australia.jpg" /></div><div class="content">
             <h2>Studium</h2>
-            <p>Seit kurzem bin ich zurück aus meinem Auslandssemester, welches ich an der University of Newcastle in Australien absolviert habe. In Deutschland befinde ich mich derzeit im 6. Semester meines Bachelors des Studiengangs Wirtschaftsingenieurswesen, welchen ich am Karlsruher Institut für Technologie abschließen werde.</p>
+            <p>Seit kurzem bin ich zurück aus meinem Auslandssemester, welches ich an der University of Newcastle in Australien absolviert habe. In Deutschland befinde ich mich derzeit im 6. Semester meines Bachelors des Studiengangs Wirtschaftsingenieurswesen, welchen ich am Karlsruher Institut für Technologie abschließen werde. Um mich weiter mit meinen beiden Studienschwerpunkten Finanzen und künstliche Intelligenz zu beschäftigen, werde ich meine Bachelorarbeit im
+                <a href="https://risk.fbv.kit.edu/c-ram/index.php"></a>C-RAM Institut im Bereich Alternative Big Data machen.</p>
         </div>
         </section>
         <section class="spotlight">
