--- a/webseiten-de.html
+++ b/webseiten-de.html
@@ -22,6 +22,15 @@
     <!-- Header -->
     <header id="header">
         <h1><a href="index.html">Martin Thoma</a></h1>
+        <div style="width: 45%; float: right;">
+            <ul class="icons navigation">
+                <li><a href="www.linkedin.com/in/thoma-martin" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+                <li><a href="mailto:martin.thoma@web.de" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+                <li><a href="https://github.com/Thoma997" class="icon fa-github"><span class="label">GitHub</span></a></li>
+                <li><a href="websites.html"><img src="images/union-jack-flag.png" alt="image-english-flag"></a></li>
+                <li><a href="#"><img src="images/german-flag.png" alt="image-german-flag"></a></li>
+            </ul>
+        </div>
         <!--  <nav id="nav">
               <ul>
                   <li class="special">
@@ -46,9 +55,11 @@
         <section class="wrapper style5">
             <div class="inner">
                 <h3>Wichtige Information</h3>
-                <p>Vielen Dank für Ihre Interessse an meinen Fähigkeiten als Webentwickler. Am Ende des Absatzes finden Sie einen Fragenbogen. Falls Sie mit dem Gedanken spielen, eine eigene Website zu besitzen, würde ich Sie bitten, diesen Fragebogen auszufüllen. Die Bearbeitung dauert keine 3 Minuten.</p>
-                <p><a href="bakeduprising.com.au">Bakey Uprising</a> und <a href="reiserlaw.eu">Reiserlaw</a> sind zwei meiner Webseiten, welche ich für Kunden fertiggestellt habe.</p>
-                <p>Rechtlicher Hinweis:<br />Da ich die Dienstleistung der Webseitenentwicklung als Privatperson anbiete, muss ich mich aus rechtlichen Gründen an verschiedene Reglements halten. Nach der Fertigstellung des Auftrags, wird eine Privatrechnung ausgestellt, welche keine Mehrwertsteuer beinhalten wird.<br />Ihre Daten werden vertraulich behandelt, nur von mir selbst eingesehen, lokal gespeichert und nicht an Dritte weitergegeben. </p>
+                <div style="text-align: justify">
+                    <p>Vielen Dank für Ihre Interessse an meinen Fähigkeiten als Webentwickler. Am Ende des Absatzes finden Sie einen Fragenbogen. Falls Sie mit dem Gedanken spielen, eine eigene Website zu besitzen, würde ich Sie bitten, diesen Fragebogen auszufüllen. Die Bearbeitung dauert keine 3 Minuten.</p>
+                    <p><a href="bakeduprising.com.au">Bakey Uprising</a> und <a href="reiserlaw.eu">Reiserlaw</a> sind zwei meiner Webseiten, welche ich für Kunden fertiggestellt habe.</p>
+                    <p>Rechtlicher Hinweis:<br />Da ich die Dienstleistung der Webseitenentwicklung als Privatperson anbiete, muss ich mich aus rechtlichen Gründen an verschiedene Reglements halten. Nach der Fertigstellung des Auftrags, wird eine Privatrechnung ausgestellt, welche keine Mehrwertsteuer beinhalten wird.<br />Ihre Daten werden vertraulich behandelt, nur von mir selbst eingesehen, lokal gespeichert und nicht an Dritte weitergegeben. </p>
+                </div>
                 <div>
                     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdMEzkj6XZzMNi5rswO68qdCLLSf1ezTl8Wa9h-CRPotPcfsA/viewform?embedded=true" width="100%" height="700" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
                 </div>
