--- a/websites.html
+++ b/websites.html
@@ -22,6 +22,15 @@
     <!-- Header -->
     <header id="header">
         <h1><a href="index.html">Martin Thoma</a></h1>
+        <div style="width: 45%; float: right;">
+            <ul class="icons navigation">
+                <li><a href="www.linkedin.com/in/thoma-martin" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+                <li><a href="mailto:martin.thoma@web.de" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+                <li><a href="https://github.com/Thoma997" class="icon fa-github"><span class="label">GitHub</span></a></li>
+                <li><a href="#"><img src="images/union-jack-flag.png" alt="image-english-flag"></a></li>
+                <li><a href="webseiten-de.html"><img src="images/german-flag.png" alt="image-german-flag"></a></li>
+            </ul>
+        </div>
       <!--  <nav id="nav">
             <ul>
                 <li class="special">
@@ -46,9 +55,11 @@
         <section class="wrapper style5">
             <div class="inner">
                 <h3>Important Informations</h3>
-                <p>Thank you, for your interest in me as webdeveloper. You will find an survey attached underneath the following informations. If you certainly think about getting your own website, please do the attached survey - It won't cost more than 3 minutes.</p>
-                <p><a href="bakeduprising.com.au">Bakey Uprising</a> and <a href="reiserlaw.eu">Reiserlaw</a> are two websites, I already developed.</p>
-                <p>Legal Information:<br />The service offered is offered from me as private person. Thus, I have to follow certain legal restrictions which won't have any affect on the development time or quality of the product. When the order will be finished, I will provide a private invoice which excludes VAT.<br />Your personal data will be treated with absolute confidentiality. They will not be shared with third parties, stored locally and be seen by me only.</p>
+                <div style="text-align: justify">
+                    <p>Thank you, for your interest in me as webdeveloper. You will find an survey attached underneath the following informations. If you certainly think about getting your own website, please do the attached survey - It won't cost more than 3 minutes.</p>
+                    <p><a href="bakeduprising.com.au">Bakey Uprising</a> and <a href="reiserlaw.eu">Reiserlaw</a> are two websites, I already developed.</p>
+                    <p>Legal Information:<br />The service offered is offered from me as private person. Thus, I have to follow certain legal restrictions which won't have any affect on the development time or quality of the product. When the order will be finished, I will provide a private invoice which excludes VAT.<br />Your personal data will be treated with absolute confidentiality. They will not be shared with third parties, stored locally and be seen by me only.</p>
+                </div>
                 <div>
                     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdMEzkj6XZzMNi5rswO68qdCLLSf1ezTl8Wa9h-CRPotPcfsA/viewform?embedded=true" width="100%" height="700" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
                 </div>
