--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 					<header id="header" class="alt">
 						<h1><a href="#banner" class="more scrolly">Martin Thoma</a></h1>
 						<div style="width: 45%; float: right;">
-							<ul class="icons" style="margin-left: 65%;">
+							<ul class="icons navigation">
 								<li><a href="www.linkedin.com/in/thoma-martin" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								<li><a href="mailto:martin.thoma@web.de" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 								<li><a href="https://github.com/Thoma997" class="icon fa-github"><span class="label">GitHub</span></a></li>
-								<li style="margin-top: 10px"><a href="#"><img src="images/union-jack-flag.png" alt="image-english-flag"></a></li>
-								<li style="margin-top: 10px"><a href="index-de.html"><img src="images/german-flag.png" alt="image-german-flag"></a></li>
+								<li><a href="#"><img src="images/union-jack-flag.png" alt="image-english-flag"></a></li>
+								<li><a href="index-de.html"><img src="images/german-flag.png" alt="image-german-flag"></a></li>
 							</ul>
 						</div>
 
@@ -86,13 +86,15 @@
 							<div class="image"><img src="images/work_background.jpg" alt="work_background.jpg" /></div><div class="content">
 								<h2>Work</h2>
 							<p>Currently I am working as a freelancer. I develop websites for privaters and small businesses. I gained experience in Web Automation, Business Analytics, Machine Intelligence, teaching classes and Project Management. I love to master challenges and to force myself out of comfort zones. During my time as exchange student in Australia I additionally work as waiter at <a href="https://restaurantmason.com/">Restaurant Mason</a>, Newcastle to finance my year abroad. <br /><br />
-								<a href="websites.html" class="button">Click Here to learn more about my websites</a></p>
+							</p>
+							<a href="websites.html" style="horiz-align: center" class="button">Learn More</a>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/studies_australia.jpg" alt="studies_australia.jpg" /></div><div class="content">
 								<h2>Studies</h2>
-								<p>At the moment I am studying at University of NewCastle, NSW, Australia for two semesters. When I return to Germany in December 2018, I will finish my Bachelor of Science in the major "Industrial Engineering and Management" at Karlsruher Institure of Technologie. My current subjects are</p>
+								<p>At the moment I am studying at University of NewCastle, NSW, Australia for two semesters. When I return to Germany in December 2018, I will finish my Bachelor of Science in the major "Industrial Engineering and Management" at Karlsruher Institure of Technologie. To stay focused on my studies on finance and artificial intelligence I will write my Bachelors Thesis together with
+									<a href="https://risk.fbv.kit.edu/c-ram/index.php"></a>C-RAM Institute at KIT. My current subjects are</p>
 								<ul>
 									<li>Machine Intelligence</li>
 									<li>Software Architecture and Quality Management</li>
