killed bugs mistakes and improved design

--- a/index-de.html
+++ b/index-de.html
@@ -83,15 +83,15 @@
         <section class="spotlight">
             <div class="image"><img src="images/work_background.jpg" alt="work_background.jpg" /></div><div class="content">
             <h2>Arbeit</h2>
-            <p>Derzeit arbeite ich als Freelancer und entwickle Websiten für Personen und Unternehmen. Während meiner Praktika und Werkstudentenstellen konnte ich ebenso Erfahrungen im Bereich der Onlineautomatisierung, Unternehmensanalyse und Projektmanagement gewinnen, wie auch im Unterrichten als Tutor am KIT. Ich liebe es, mich aus meiner Konfortzone zu locken und gefordert zu werden.
+            <p>Derzeit arbeite ich als Tutor am KIT Institut für angewandte Informatik und formale Beschreibungsverfahren (AIFB) wohin ich nach meiner Tutortätigkeit am Institut für Operations Research gewechselt bin. Da mich das Vorbereiten der Kurse und Lehren der Studierenden mit viel Freude erfüllt, möchte ich dieser Tätigkeit bis zum Ende meines Studiums nachgehen. Nebenbei arbeite ich als Freelancer und entwickle Webseiten für Privatleute und Unternehmen. Während meiner Praktika und Werkstudentenstellen konnte ich ebenso Erfahrungen im Bereich der Onlineautomatisierung, Unternehmensanalyse und Projektmanagement gewinnen, wie auch im Feld der künstlichen Intelligenz.
                 <br /><br /> </p>
-            <a href="webseiten-de.html" class="button">Interesse?</a>
+            <a href="webseiten-de.html" class="button">Zum Formular für Webseiten</a>
         </div>
         </section>
         <section class="spotlight">
             <div class="image"><img src="images/studies_australia.jpg" alt="studies_australia.jpg" /></div><div class="content">
             <h2>Studium</h2>
-            <p>Seit kurzem bin ich zurück aus meinem Auslandssemester, welches ich an der University of Newcastle in Australien absolviert habe. In Deutschland befinde ich mich derzeit im 6. Semester meines Bachelors des Studiengangs Wirtschaftsingenieurswesen, welchen ich am Karlsruher Institut für Technologie abschließen werde. Um mich weiter mit meinen beiden Studienschwerpunkten Finanzen und künstliche Intelligenz zu beschäftigen, werde ich meine Bachelorarbeit im
+            <p>Seit kurzem bin ich zurück aus meinem Auslandssemester, welches ich an der University of Newcastle in Australien absolviert habe. In Deutschland befinde ich mich derzeit im 6. Semester meines Bachelors des Studiengangs Wirtschaftsingenieurswesen, welchen ich am Karlsruher Institut für Technologie abschließen werde. Um mich weiter mit meinen beiden Studienschwerpunkten Finanzen und künstliche Intelligenz zu beschäftigen, werde ich meine Bachelorarbeit am
                 <a href="https://risk.fbv.kit.edu/c-ram/index.php"></a>C-RAM Institut im Bereich Alternative Big Data machen.</p>
         </div>
         </section>
