--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/work_background.jpg" alt="work_background.jpg" /></div><div class="content">
 								<h2>Work</h2>
-							<p>Currently I am working as a freelancer. I develop websites for privaters and small businesses. I gained experience in Web Automation, Business Analytics, Machine Intelligence, teaching classes and Project Management. I love to master challenges and to force myself out of comfort zones. During my time as exchange student in Australia I additionally work as waiter at <a href="https://restaurantmason.com/">Restaurant Mason</a>, Newcastle to finance my year abroad. <br /><br />
+							<p>Currently, I am working as a Tutor at the KIT institute for executive informatics and formal description methods (AIFB). Therefore preparing lessons and teaching students is part of my everyday business. To finance my studies I am working as a freelancer as well. I develop websites for privaters and small businesses. I gained experience in Web Automation, Business Analytics, Machine Intelligence, Project Management etc. I love to master challenges and to force myself out of comfort zones.<br /><br />
 							</p>
 							<a href="websites.html" style="horiz-align: center" class="button">Learn More</a>
 							</div>
@@ -93,13 +93,7 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/studies_australia.jpg" alt="studies_australia.jpg" /></div><div class="content">
 								<h2>Studies</h2>
-								<p>At the moment I am studying at University of NewCastle, NSW, Australia for two semesters. When I return to Germany in December 2018, I will finish my Bachelor of Science in the major "Industrial Engineering and Management" at Karlsruher Institure of Technologie. To stay focused on my studies on finance and artificial intelligence I will write my Bachelors Thesis together with
-									<a href="https://risk.fbv.kit.edu/c-ram/index.php"></a>C-RAM Institute at KIT. My current subjects are</p>
-								<ul>
-									<li>Machine Intelligence</li>
-									<li>Software Architecture and Quality Management</li>
-									<li>International Trade Logistics</li>
-								</ul>
+								<p>At the moment I am studying Industrial Engineering and Management at Karlsruhe University of Technology. Lately, I have begun to write my Bachelors Thesis about mapping stock charts with parameters gained by analysing satellite pictures with machine learning algorithms. I write this thesis at the <a href="https://risk.fbv.kit.edu/c-ram/index.php">Institute for Computational Risk and Asset Management</a>. I also very enjoyed the time abroad at University of NewCastle, NSW, Australia in summer 2018.
 							</div>
 						</section>
 						<section class="spotlight">
