--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/studies_australia.jpg" alt="studies_australia.jpg" /></div><div class="content">
 								<h2>Studies</h2>
-								<p>At the moment I am studying Industrial Engineering and Management at Karlsruhe University of Technology. Lately, I have begun to write my Bachelors Thesis about mapping stock charts with parameters gained by analysing satellite pictures with machine learning algorithms. I write this thesis at the <a href="https://risk.fbv.kit.edu/c-ram/index.php">Institute for Computational Risk and Asset Management</a>. I also very enjoyed the time abroad at University of NewCastle, NSW, Australia in summer 2018.
+								<p>At the moment I am studying Industrial Engineering and Management at Karlsruhe University of Technology. Lately, I have begun to write my Bachelors Thesis about mapping stock charts with parameters gained by analysing satellite pictures with machine learning algorithms. I write this thesis at the <a href="https://risk.fbv.kit.edu/c-ram/index.php">Institute for Computational Risk and Asset Management</a>. I also very enjoyed the time abroad during spring/summer 2018 at University of NewCastle, NSW, Australia.
 							</div>
 						</section>
 						<section class="spotlight">
