--- a/webseiten-de.html
+++ b/webseiten-de.html
@@ -57,7 +57,7 @@
                 <h3>Wichtige Information</h3>
                 <div style="text-align: justify">
                     <p>Vielen Dank für Ihre Interessse an meinen Fähigkeiten als Webentwickler. Am Ende des Absatzes finden Sie einen Fragenbogen. Falls Sie mit dem Gedanken spielen, eine eigene Website zu besitzen, würde ich Sie bitten, diesen Fragebogen auszufüllen. Die Bearbeitung dauert keine 3 Minuten.</p>
-                    <p><a href="bakeduprising.com.au">Bakey Uprising</a> und <a href="reiserlaw.eu">Reiserlaw</a> sind zwei meiner Webseiten, welche ich für Kunden fertiggestellt habe.</p>
+                    <p><a href="http://bakeduprising.com.au">Bakey Uprising</a> und <a href="http://reiserlaw.eu">Reiserlaw</a> sind zwei meiner Webseiten, welche ich für Kunden fertiggestellt habe.</p>
                     <p>Rechtlicher Hinweis:<br />Da ich die Dienstleistung der Webseitenentwicklung als Privatperson anbiete, muss ich mich aus rechtlichen Gründen an verschiedene Reglements halten. Nach der Fertigstellung des Auftrags, wird eine Privatrechnung ausgestellt, welche keine Mehrwertsteuer beinhalten wird.<br />Ihre Daten werden vertraulich behandelt, nur von mir selbst eingesehen, lokal gespeichert und nicht an Dritte weitergegeben. </p>
                 </div>
                 <div>
@@ -71,8 +71,6 @@
     <footer id="footer">
         <ul class="icons">
             <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-            <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-            <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
             <li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
             <li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
         </ul>
