--- a/websites.html
+++ b/websites.html
@@ -57,7 +57,7 @@
                 <h3>Important Informations</h3>
                 <div style="text-align: justify">
                     <p>Thank you, for your interest in me as webdeveloper. You will find an survey attached underneath the following informations. If you certainly think about getting your own website, please do the attached survey - It won't cost more than 3 minutes.</p>
-                    <p><a href="bakeduprising.com.au">Bakey Uprising</a> and <a href="reiserlaw.eu">Reiserlaw</a> are two websites, I already developed.</p>
+                    <p><a href="http://bakeduprising.com.au">Bakey Uprising</a> and <a href="http://reiserlaw.eu">Reiserlaw</a> are two websites, I already developed.</p>
                     <p>Legal Information:<br />The service offered is offered from me as private person. Thus, I have to follow certain legal restrictions which won't have any affect on the development time or quality of the product. When the order will be finished, I will provide a private invoice which excludes VAT.<br />Your personal data will be treated with absolute confidentiality. They will not be shared with third parties, stored locally and be seen by me only.</p>
                 </div>
                 <div>
